plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'com.diffplug.spotless' version '6.21.0'
}

group = 'tobyspring'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-json'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}


tasks.named('test') {
    useJUnitPlatform()
}

spotless {
    java {
        target("**/*.java")
        importOrder()
        // 사용하지 않은 import문 제거
        removeUnusedImports()
        // 2개 이상 있거나 이제 앞뒤로 불필요한 공백이 있을 때 제거해주는 옵션
        trimTrailingWhitespace()
        // 줄은 공백으로 남아있을 수 있도록 항상 옵션을 걸어준다.
        endWithNewline()
        // google java format
        googleJavaFormat().aosp()
    }
}

// git pre-commit hook task 설정
tasks.register("addGitPreCommitHook", Copy) {
    from 'scripts/pre-commit'
    into '.git/hooks'
}

compileJava.dependsOn addGitPreCommitHook

